@@ -4,6 +4,7 @@ import com.celpen.vynder.dto.request.CreateCreatorRequest;
 import com.celpen.vynder.dto.request.UpdateCreatorRequest;
 import com.celpen.vynder.dto.response.CreatorResponse;
 import com.celpen.vynder.model.Creator;
+import com.celpen.vynder.model.Niche;
 import com.celpen.vynder.model.User;
 import com.celpen.vynder.repo.CreatorRepository;
 import com.celpen.vynder.service.AuthService;
@@ -13,6 +14,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -21,18 +23,9 @@ public class CreatorServiceImpl implements CreatorService {
     private final CreatorRepository creatorRepository;
     private final AuthService authService;
 
-    private CreatorResponse mapToResponse(Creator creator) {
-        return CreatorResponse.builder()
-                .id(creator.getId())
-                .name(creator.getName())
-                .niche(creator.getNiche())
-                .followers(creator.getFollowers())
-                .engagementRate(creator.getEngagementRate())
-                .email(creator.getUser().getEmail())
-                .build();
-    }
 
     // Create a new creator profile
+    @Override
     public CreatorResponse createProfile(CreateCreatorRequest request) {
 
         User user = authService.getUserEntityByEmail(request.getEmail());
@@ -40,58 +33,95 @@ public class CreatorServiceImpl implements CreatorService {
         if (!user.getRole().name().equals("CREATOR")) {
             throw new RuntimeException("Only CREATOR users allowed");
         }
-        
+
+        Niche niche = null;
+
+        if (request.getNiche().equals("GRAPHICS")) {
+            niche = Niche.GRAPHICS;
+        } else if (request.getNiche().equals("ANIMATOR")) {
+            niche = Niche.ANIMATOR;
+        } else if (request.getNiche().equals("VIDEO")) {
+            niche = Niche.VIDEO;
+        }
         Creator creator = Creator.builder()
                 .user(user)
                 .name(request.getName())
-                .niche(request.getNiche())
-                .followers(request.getFollowers())
-                .engagementRate(request.getEngagementRate())
+                .niche(niche)
+                .about(request.getAbout())
                 .build();
         Creator saved = creatorRepository.save(creator); // <-- must save entity
 
 
-        return mapToResponse(creator);
+        return mapToResponse(saved);
 
     }
 
+    @Override
     public CreatorResponse update(UpdateCreatorRequest request) {
         Creator creator = creatorRepository.findById(request.getCreatorId())
                 .orElseThrow(() -> new RuntimeException("Creator not found"));
 
-        creator.setName(request.getName());
-        creator.setNiche(request.getNiche());
-        creator.setFollowers(request.getFollowers());
-        creator.setEngagementRate(request.getEngagementRate());
+        Niche niche = null;
 
-        Creator updated = creatorRepository.save(creator);
+        switch (request.getNiche()) {
+            case "GRAPHICS" -> niche = Niche.GRAPHICS;
+            case "ANIMATOR" -> niche = Niche.ANIMATOR;
+            case "VIDEO" -> {
+                niche = Niche.VIDEO;
 
-        return mapToResponse(updated);
+                creator.setName(request.getName());
+                creator.setNiche(niche);
+                creator.setAbout(request.getAbout());
+
+                Creator updated = creatorRepository.save(creator);
+
+                return mapToResponse(updated);
+            }
+        }
+       return null;
     }
 
-    // Get all creators
+    @Override
     public List<CreatorResponse> getAllCreators() {
-        return creatorRepository.findAll()
-                .stream()
+        return creatorRepository.findAll().stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // Get creator by ID
-    public Optional<CreatorResponse> getCreatorById(Long id) {
+    @Override
+    public Optional<CreatorResponse> getCreatorById (Long id){
         return creatorRepository.findById(id)
                 .map(this::mapToResponse);
     }
 
-    public Creator getCreatorEntityByUser(User user) {
+    @Override
+    public Creator getCreatorEntityByUser (User user){
         return creatorRepository.findByUser(user)
                 .orElseThrow(() -> new RuntimeException("Brand profile not found"));
     }
 
-    // Get creator by user ID
-    public Optional<CreatorResponse> getByUserId(Long userId) {
+    @Override
+    public Optional<CreatorResponse> getByUserId (Long userId){
         return creatorRepository.findByUserId(userId)
                 .map(this::mapToResponse);
     }
+    private CreatorResponse mapToResponse (Creator creator){
 
+        String niche1 = "";
+
+        if (creator.getNiche().name().equals("GRAPHICS")) {
+            niche1 = "Graphics Designer";
+        } else if (creator.getNiche().name().equals("ANIMATOR")) {
+            niche1 = "Animator";
+        } else if (creator.getNiche().name().equals("VIDEO")) {
+            niche1 = "Videographer";
+        }
+
+        return CreatorResponse.builder()
+                .id(creator.getId())
+                .name(creator.getName())
+                .niche(niche1)
+                .about(creator.getAbout())
+                .build();
+    }
 }
